# AOC-2023

./: .gitignore  Cargo.toml  README.md
day-1/: Cargo.toml
day-1/src/: main.rs
day-macro/: Cargo.toml  main.rs
day-macro/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
