[package]
name = "day-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11", features = [ "blocking" ] }
dyn-eq = { version="0.1.3" }
syn = "1.0"
quote = "1.0.33"
syner = "0.3.0"

[lib]
proc-macro = true
