[package]
name = "day-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "blocking" ] }
dyn-eq = { version = "0.1.3" }
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0.33"
proc-macro2 = "1.0.70"

[lib]
proc-macro = true
